# Image-processing-methods

./: .gitignore  LICENSE  README.md
brightness-calculation/: CMakeLists.txt  README.md  color.cpp  color.h  illumination.cpp  illumination.h  input.txt  lab_2.cpp  light.h  main.cpp  material.h  vector3d.cpp  vector3d.h
illuminance-calculation/: CMakeLists.txt  README.md  illumination.cpp  illumination.h  main.cpp  vector3d.cpp  vector3d.h
scene-rendering/: CMakeLists.txt  README.md  main.cpp
